<resources>
    <string name="app_name">O-boi</string>
    <string name="photo_content_description">Photo</string>
    <string name="settings_orientation">Orientation</string>
    <string name="settings_orientation_vertical">Vertical</string>
    <string name="settings_orientation_horizontal">Horizontal</string>
    <string name="settings_orientation_any">All</string>
    <string name="settings_category">Category</string>
    <string name="settings_color">Color</string>
    <string name="settings_order">Order</string>
    <string name="toolbar_settings">Search settings</string>
    <string name="toolbar_about_app">About app</string>
    <string name="toolbar_clicked_photos">Last viewed</string>
    <string name="save_to_gallery">Save to gallery</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="about_app_pixabay">The app is based on free source <b>pixabay.com</b></string>
    <string name="about_app_developer"><b>Developer:</b> Valentina Tiurina</string>
    <string name="about_app_email"><b>E-mail:</b> turina.valentina@gmail.com</string>
    <string name="load_info_nothing_found">Nothing found. \nTry to change search settings.</string>
    <string name="load_info_image_loading">Loading image…</string>
    <string name="load_info_images_loading">Loading images…</string>
    <string name="toast_saved_to_gallery">Image is saved to gallery</string>
    <string name="toast_wallpaper_set">Wallpaper is set</string>
    <string name="menu_search">Search</string>
    <string name="menu_last_viewed">Last viewed</string>
    <string name="menu_about">About app</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete_clicked_photos">Delete viewed photos</string>
    <string name="checkbox_editors_choice">Editor\'s choice </string>
    <string name="checkbox_grayscale">Grayscale</string>
    <string name="checkbox_transparent">Transparent</string>
    <string name="settings_order_popular">Popular</string>
    <string name="settings_order_latest">Latest</string>
    <string name="settings_safesearch">Safe search</string>
    <string name="load_info_network_error">Network connection error.\nPlease, check network settings.</string>
    <string name="load_info_server_error">Server connection error.\nPlease, try again later.</string>
    <string name="load_info_network_error_short">Network connection error</string>
    <string name="load_info_no_clicked_photos">Last viewed photos will be displayed here.\n*Links to photos are stored for 24 hours</string>
    <string name="share_subject">Wallpaper for cellphones from O-boi app</string>
    <string name="share_type">text/plain</string>
    <string name="share_title">Share</string>
    <string name="pixabay_logo">Pixabay logo</string>
    <string name="toolbar_crop_image">Crop image</string>
    <string name="progress_set_wallpaper">Setting wallpaper</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_apply">Apply</string>
    <string name="exit">Please click BACK again to exit</string>
    <string name="crop_screen_size">screen size</string>
    <string name="crop_free_size">free size</string>
</resources>
