<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/menu_share"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_share"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_reset"
        android:icon="@drawable/ic_reset"
        android:title="@string/menu_reset"
        android:visible="false"

        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_apply_enabled"
        android:icon="@drawable/ic_apply_enabled"
        android:title="@string/menu_apply"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_apply_blocked"
        android:icon="@drawable/ic_apply_blocked"
        android:title="@string/menu_apply"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>