<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.photolist.PhotoListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="?attr/toolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.Toolbar"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/toolbar_settings" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/settings_start_margin"
            android:layout_marginTop="@dimen/settings_start_margin"
            android:text="@string/settings_orientation"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/orientation_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/orientation_vertical_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settings_start_margin"
                android:layout_marginTop="4dp"
                android:text="@string/settings_orientation_vertical" />

            <RadioButton
                android:id="@+id/orientation_horizontal_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settings_start_margin"
                android:layout_marginTop="4dp"
                android:text="@string/settings_orientation_horizontal" />

            <RadioButton
                android:id="@+id/orientation_all_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settings_start_margin"
                android:layout_marginTop="4dp"
                android:checked="true"
                android:text="@string/settings_orientation_any" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/settings_start_margin"
            android:layout_marginTop="8dp"
            android:layout_marginRight="@dimen/settings_start_margin"
            android:layout_marginBottom="8dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/settings_start_margin"
            android:text="@string/settings_category"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="@dimen/settings_start_margin"
            android:layout_marginBottom="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/settings_start_margin"
            android:layout_marginTop="8dp"
            android:layout_marginRight="@dimen/settings_start_margin"
            android:layout_marginBottom="8dp"
            android:background="@android:color/black" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
